<resources>

    <!-- Globals -->
    <string name="app_name">TapTheMap</string>
    <string name="app_desc">Tap the countries to complete tasks</string>
    <string name="app_about">This application is a winning project created during the hackathon organized by Central Statistical Office of Poland. Original idea by the team EmojiNotSupportedException:\n\n• Krzysztof Antoniak\n• Łukasz Kędziorski\n• Marta Mazurkiewicz</string>

    <!-- Main screen -->
    <string name="new_game">New game</string>
    <string name="button_about">About</string>
    <string name="oops">Oops!</string>
    <string name="we_need_camera_permission">We need camera permission to track the marker.</string>
    <string name="button_try_again">Try again</string>

    <!-- About screen -->
    <string name="button_licenses">Licenses</string>
    <string name="button_go_back">Go back</string>
    <string name="error_loading_licenses">Error loading licenses...</string>

    <!-- Score screen -->
    <string name="new_high_score">New high score!</string>
    <string name="score_great_job">Great job!</string>
    <string name="score_needs_improvement">Needs improvement!</string>
    <string name="your_score">Your score:</string>
    <string name="play_again">Play again</string>
    <string name="score_value">%1$d/%2$d</string>

    <!-- Rules board -->
    <string name="rules_description">Tap the countries to estimate intensity of particular phenomenon in each of them.</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="ok">OK</string>
    <string name="about_using_markers">To play you need to print out marker image and put it on the table. You can also display it on another device. Download marker from tapthemap.stat.gov.pl</string>

    <!-- Marker scanner -->
    <string name="scan_marker_to_start">Scan marker to start</string>
    <string name="help">Help</string>

    <!-- Questions screen -->
    <string name="loading_objects">Loading objects...</string>
    <string name="question_progress_counter">%1$d/%2$d</string>
    <string name="answer_country_value">%1$s (%2$s)</string>

    <!-- Sample data -->
    <string-array name="questions">
        <item>What is GDP?</item>
        <item>What is the level of no toilet rate?</item>
        <item>What is the unemployment rate in the country?</item>
        <item>What is the afforestation rate?</item>
        <item>What is the population density?</item>
        <item>What is the waste generation rate?</item>
        <item>What is the level of internet access by households?</item>
        <item>What is GDP per capita?</item>
        <item>What is the area?</item>
        <item>What is the population?</item>
        <item>What is the share of the EU population is in the given country?</item>
        <item>What is fertility rate?</item>
        <item>What is the share of the renewable energy in the total power consumption?</item>
        <item>What is the share of the young adults (18–34) living with their parents?</item>
        <item>What is the share of people whose self-evaluated general health condition is bad?</item>
        <item>What is the share of people whose self-evaluated general health condition is good?</item>
        <item>What is the share of recycled wasted per person?</item>
        <item>What is the share of the organic farming?</item>
        <item>Frequency of participation in sport activities in the last 12 months</item>
        <item>Frequency of participation in cultural(cinema) activities in the last 12 months</item>
        <item>Internet purchases by individuals</item>
        <item>Individuals - social network activities</item>
        <item>Time spent on health-enhancing (non-work-related) aerobic physical activity</item>
    </string-array>

    <!-- Country names -->
    <string name="country_name_al">Albania</string>
    <string name="country_name_at">Austria</string>
    <string name="country_name_ba">Bosnia and Herzegovina</string>
    <string name="country_name_be">Belgium</string>
    <string name="country_name_bg">Bulgaria</string>
    <string name="country_name_by">Belarus</string>
    <string name="country_name_ch">Switzerland</string>
    <string name="country_name_cy">Cyprus</string>
    <string name="country_name_cz">Czechia</string>
    <string name="country_name_de">Germany</string>
    <string name="country_name_dk">Denmark</string>
    <string name="country_name_ee">Estonia</string>
    <string name="country_name_el">Greece</string>
    <string name="country_name_es">Spain</string>
    <string name="country_name_fi">Finland</string>
    <string name="country_name_fr">France</string>
    <string name="country_name_hr">Croatia</string>
    <string name="country_name_hu">Hungary</string>
    <string name="country_name_ie">Ireland</string>
    <string name="country_name_it">Italy</string>
    <string name="country_name_lt">Lithuania</string>
    <string name="country_name_lu">Luxembourg</string>
    <string name="country_name_lv">Latvia</string>
    <string name="country_name_md">Moldavia</string>
    <string name="country_name_me">Montenegro</string>
    <string name="country_name_mk">Macedonia</string>
    <string name="country_name_mt">Malta</string>
    <string name="country_name_nl">Netherlands</string>
    <string name="country_name_no">Norway</string>
    <string name="country_name_pl">Poland</string>
    <string name="country_name_pt">Portugal</string>
    <string name="country_name_ro">Romania</string>
    <string name="country_name_rs">Serbia</string>
    <string name="country_name_ru">Russia</string>
    <string name="country_name_se">Sweden</string>
    <string name="country_name_si">Slovenia</string>
    <string name="country_name_sk">Slovakia</string>
    <string name="country_name_tr">Turkey</string>
    <string name="country_name_ua">Ukraine</string>
    <string name="country_name_uk">United Kingdom</string>
    <string name="country_name_xk">Kosovo</string>

</resources>
