<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/triplePadding">

    <LinearLayout
        android:id="@+id/about_block"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/triplePadding"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/HeaderText"
            android:text="@string/button_about" />

        <TextView
            android:id="@+id/text_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/doublePadding"
            android:layout_marginTop="@dimen/doublePadding"
            android:text="@string/app_about" />

    </LinearLayout>

    <ImageView
        android:id="@+id/hackathon_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/triplePadding"
        android:src="@drawable/hackathon"
        app:layout_constraintDimensionRatio="15:10"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button_licenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/triplePadding"
        android:text="@string/button_licenses"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_go_back" />

    <Button
        android:id="@+id/button_go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

</android.support.constraint.ConstraintLayout>