<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/left_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/triplePlusPadding"
        android:src="@drawable/ic_marker_use"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="spread" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/triplePlusPadding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/left_image"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/HeaderText"
            android:layout_width="wrap_content"
            android:layout_marginBottom="@dimen/standardPadding"
            android:text="@string/oops"/>

        <TextView
            style="@style/SubHeaderText"
            android:layout_width="wrap_content"
            android:layout_marginBottom="@dimen/triplePadding"
            android:textSize="@dimen/subsubheaderTextSize"
            android:text="@string/we_need_camera_permission"
            android:lineSpacingMultiplier="1.4" />

        <Button
            android:id="@+id/button_try_camera_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_try_again" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>