<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/triplePlusPadding"
    android:background="@color/colorPrimary"
    android:paddingEnd="@dimen/triplePlusPadding"
    android:paddingStart="@dimen/doublePadding"
    tools:context=".game_ui.RulesBoardFragment">

    <ImageView
        android:id="@+id/left_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/triplePlusPadding"
        android:layout_marginStart="@dimen/doublePadding"
        android:layout_marginTop="@dimen/triplePlusPadding"
        android:src="@drawable/ic_tap_phase4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="spread" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/doublePadding"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/left_image"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/SubHeaderText"
            android:layout_width="wrap_content"
            android:layout_marginBottom="@dimen/doublePadding"
            android:text="@string/rules_description"
            android:textSize="@dimen/subsubheaderTextSize" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/doublePadding"
            android:text="@string/ok"
            android:textAlignment="center" />

        <CheckBox
            android:id="@+id/checkbox_dont_show_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dont_show_again"
            android:textColor="@color/textColorOnPrimary" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>